[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/art/player.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/objects/hitbox/hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/button_prompts/W.png" type="Texture" id=5]
[ext_resource path="res://assets/art/button_prompts/A.png" type="Texture" id=6]
[ext_resource path="res://assets/art/button_prompts/S.png" type="Texture" id=7]
[ext_resource path="res://assets/art/button_prompts/D.png" type="Texture" id=8]

[sub_resource type="Animation" id=5]
resource_name = "button_reveal"
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonPrompts/W:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonPrompts/W:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonPrompts/A:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( -12, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonPrompts/A:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonPrompts/S:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ButtonPrompts/S:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 6 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ButtonPrompts/D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ButtonPrompts/D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 12, -4 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 4.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.937255, 0.839216, 0.713726, 1, 1, 1, 1, 0 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 4.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 3 )

[node name="Player" type="RigidBody2D"]
collision_mask = 4
continuous_cd = 1
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/button_reveal = SubResource( 5 )

[node name="ButtonPrompts" type="Node2D" parent="."]

[node name="W" type="Sprite" parent="ButtonPrompts"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -4 )
texture = ExtResource( 5 )

[node name="A" type="Sprite" parent="ButtonPrompts"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -4 )
texture = ExtResource( 6 )

[node name="S" type="Sprite" parent="ButtonPrompts"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -4 )
texture = ExtResource( 7 )

[node name="D" type="Sprite" parent="ButtonPrompts"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -4 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
vframes = 3
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="TurnCooldown" type="Timer" parent="."]
one_shot = true

[node name="DustContainer" type="Node" parent="."]

[node name="DashDust" type="CPUParticles2D" parent="DustContainer"]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
gravity = Vector2( 0, -98 )
initial_velocity = 32.26
initial_velocity_random = 0.34
angular_velocity = 309.68
angular_velocity_random = 0.27
linear_accel = 100.0
linear_accel_random = 1.0
tangential_accel = 34.41
tangential_accel_random = 0.17
color_ramp = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
monitorable = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 160

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )

[editable path="Hitbox"]

[editable path="Hurtbox"]
